--- a/test/index.html
+++ b/test/index.html
@@ -13,32 +13,7 @@
 <body ng-controller="myController">
     <div class="container-fluid row">
         <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3> Zip Codes - Find City and State</h3>
-                </div>
-                <div class="panel-body">
-                    <table class="table table-bordered table-responsive">
-                        <tr>
-                            <th> Zip Code</th>
-                            <th> Full address </th>
-                        </tr>
-                        <tr ng-repeat="zipcodeObj in zipcodes">
-                            <td >
-                                {{zipcodeObj.zipcode}}
-                            </td>
-                            <td >
-                                {{zipcodeObj.full_address}}
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="panel-footer">
-                    <button class="btn btn-danger" ng-click="clear()">Clear</button>
-                    <button class="btn btn-primary" ng-click="findseq()">Find Sequential</button>
-                    <button class="btn btn-primary" ng-click="findParallel()">Find Parallel</button>
-                </div>
-            </div>
+            <div ng-view></div>
         </div>
 </body>
 
